# AED-Graphs

./: .gitignore  CMakeLists.txt  Class Diagram.drawio  Doxyfile  Grafosppt.pptx  Graph.cpp  main.cpp
include/: App.h  AppStarter.h  Data.h  Graph.h  GraphGN.h  GraphLines.h  Menu.h  structs.h
src/: App.cpp  AppStarter.cpp  Data.cpp  Graph.cpp  GraphGN.cpp  GraphLines.cpp  Menu.cpp
tests/: AppTest.cpp  DataTest.cpp  tests.cpp
